- New: Log module outputs can be setup with "or" rule (not only "xor").
- New: Add FirePHP output for logging module.
- New: Add trigger ACTION_DELETE and ACTION_MODIFY.
- New: Can define different requests according to database type into migration files.
- New: Add "canvas" feature to overwrite page of thirdparty, contact, product with yours.
- New: Removed artichow deprecated libraries.
- Qual: Add a lot of more PHPUnit tests.
- Qual: Data structure for supplier prices is simpler.
- Qual: Removed no more used external libraries.
- Qual: Cleaned a lot of dead code.
- Qual: More OOP (usage of "abstract", "static", ...), uniformize constructors.
- Qual: Fix a lot of checkstyle warnings.
- Qual: task #216 : Move /lib into /core/lib directory
- Qual: task #217 : Move core files into core directory (login, menus, triggers, boxes, modules)


***** ChangeLog for 3.1 compared to 3.0 *****
WARNING: IE6 browser is no more supported in this version.
For users:
- New: War against number of clicks:
     - When adding a free bank transaction, form to add next one is still
       visible (save one click).
     - task #10969 : Add checkbox to close automatically invoice if
       payment is complete (save 3 clicks).
     - Reduce a step into supplier order workflow to save time. If user
       has permission to approve, order is approved when order is validated.
       (Save 2 clicks).
     - In commercial main menu, left menu are already opened. This save one click
       to open a proposal or order.
     - Can add a discount for third party, during invoice edition (and we 
       saved clicks again).
     - When creating a contract, sales representative are preset to user. This save
       4 clicks.
     - Can edit several fields in bank transaction line page into one update.
     - Creation of contacts from third party page go back to third party.
     - Preselect model if there is only one. This save 2 clicks. 